# Rubix-Cube-Solver

THREECUBE/: README.txt
TWOCUBE/: CMakeLists.txt  TwoCube.cpp  TwoCube.hpp  TwoCubeSolver  main.cpp
TWOCUBE/TwoCubeSolver.dSYM/Contents/: Info.plist
TWOCUBE/TwoCubeSolver.dSYM/Contents/Resources/DWARF/: TwoCubeSolver
